[Update]: fine tune add and delete task

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div class="input-group mb-4">
                     <input type="text" class="form-control" id="taskInput" placeholder="Enter your task...">
                     <button class="btn btn-primary" id="addTask">Add Task</button>
+                    <button class="btn btn-danger" id="clearTasks">Clear All</button>
                 </div>
 
                 <div class="card">
