--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="src/assets/styles.css">
 </head>
+
 <body>
     <div class="container mt-5">
-        <header class="text-center mb-4">
-            <h1 class="display-4">Task Pilot</h1>
+
+        <header class="text-center mb-4 d-flex justify-content-center align-items-center gap-2">
+            <h1 class="display-4 mb-0">Task Pilot</h1>
+            <button id="themeToggleButton" class="btn btn-outline-secondary btn-sm ms-3">
+                <i class="bi bi-moon-fill"></i>
+                <span class="d-none d-sm-inline">Toggle Dark Mode</span>
+            </button>
         </header>
         
+
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="input-group mb-4">
@@ -32,10 +40,12 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="src/js/app.js"></script>
-    
+
 </body>
+
 </html>
