--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Task Pilot - Task Management App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="src/assets/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,6 @@
                 <span class="d-none d-sm-inline">Toggle Dark Mode</span>
             </button>
         </header>
-        
 
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -30,8 +30,11 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header d-flex justify-content-between align-items-center">
                         <h2 class="h5 mb-0">My Tasks</h2>
+                        <button id="toggleButton" class="btn btn-primary mb-3" data-bs-toggle="button" aria-pressed="false" autocomplete="off">
+                            <i class="bi bi-list me-2"></i>Toggle Task List
+                        </button>
                     </div>
                     <div class="card-body">
                         <ul class="list-group" id="taskList">
@@ -45,6 +48,15 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="src/js/app.js"></script>
+    <script>
+        $(document).ready(function () 
+        {
+            $("#toggleButton").click(function () 
+            {
+                $("#taskList").slideToggle();
+            });
+        });
+    </script>
 
 </body>
 
