--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,16 @@
     <title>Task Pilot - Task Management App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="src/assets/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="icon" href="src/assets/images/task-pilot-favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/images/task-pilot-favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
     <div class="container mt-5">
         <header class="text-center mb-4 d-flex justify-content-center align-items-center gap-2">
             <div class="d-flex align-items-center">
-                <img src="src/assets/images/task-pilot-favicon.svg" height="40" width="40" class="me-2"
+                <img src="assets/images/task-pilot-favicon.svg" height="40" width="40" class="me-2"
                     alt="Task Pilot Logo">
                 <h1 class="display-4 mb-0">Task Pilot</h1>
             </div>
@@ -71,7 +71,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="src/js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
